test/parser/Queries/syntax_errors/fail_K-ForExprWithout-44.xq
(:* where ***** let ****** for *** let ****************************** eq *** for * ne * for ** $ :)
( where : Test: K-ForExprWithout-44         for       $           for       :) eq 
(foo: Written by: Frans Englich           let                  :)
(: Date: 2006-10-05T18:29:37+02:00   where   where        ne               :)
(: Purpose:  which is  ne not in scope.  ne             :)
 eq  eq (:* eq ** ne ************ where ********* for ************* let  let *** ne * ne ********** ne ****:)
for $a in(1, 2), $ eq b let  in (1,2) let  $c for  in 2) return 1, $b